--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,8 @@
 ---
 applications:
  - name: typingscore
-   random-route: true
+#   random-route: true
+   host: simple-toolchain-20181219155421198
    path: target/typingscore-0.0.1-SNAPSHOT.jar
    memory: 256M
    instances: 1
